syntax = "proto3";

package api.administrator.v1;

option go_package = "github.com/ZQCard/kratos-base-project/api/administrator/v1;v1";

service Administrator {
	rpc GetLoginAdministratorByUsername(GetLoginAdministratorByUsernameRequest) returns (GetLoginAdministratorByUsernameReply);
	rpc VerifyPassword(VerifyPasswordRequest) returns (VerifyPasswordReply);
	rpc CreateAdministrator (CreateAdministratorRequest) returns (AdministratorInfoResponse);
	rpc UpdateAdministrator (UpdateAdministratorRequest) returns (AdministratorInfoResponse);
	rpc DeleteAdministrator (DeleteAdministratorRequest) returns (AdministratorCheckResponse);
	rpc GetAdministrator (GetAdministratorRequest) returns (AdministratorInfoResponse);
	rpc ListAdministrator (ListAdministratorRequest) returns (ListAdministratorReply);

}

message GetLoginAdministratorByUsernameRequest {
	string username = 1;
}
message GetLoginAdministratorByUsernameReply {
	int64 id = 1;
	string username = 2;

}

message VerifyPasswordRequest {
	int64 id = 1;
	string password = 2;
}

message VerifyPasswordReply {
	bool success = 2;
}


message CreateAdministratorRequest {
	string username = 2;
	string password = 3;
	string mobile = 4;
	string nickname = 5;
	string avatar = 6;
}

message UpdateAdministratorRequest {
	int64 id = 1;
	string username = 2;
	string password = 3;
	string mobile = 4;
	string nickname = 5;
	string avatar = 6;
	int64 status = 7;
}

message DeleteAdministratorRequest {
	int64 id = 1;
}

message GetAdministratorRequest {
	int64 id = 1;
	string username = 2;
	string mobile = 3;
}

message ListAdministratorRequest {
	int64 page_num = 1;
	int64 page_size = 2;
}
message ListAdministratorReply {
	int64 total = 1;
	repeated AdministratorInfoResponse list = 2;
}

message AdministratorInfoResponse {
	int64 id = 1;
	string username = 2;
	string mobile = 3;
	string nickname = 4;
	string avatar = 5;
	int64 status = 6;
	string created_at = 7;
	string updated_at = 8;
	string deleted_at = 9;
}

message AdministratorCheckResponse{
	bool is_success = 1;
}