syntax = "proto3";

package kratos.api;

import "google/protobuf/duration.proto";

option go_package = "github.com/ZQCard/kratos-base-project/app/admin/service/internal/conf;conf";

message Bootstrap {
  Trace trace = 1;
  Server server = 2;
  Data data = 3;
  Auth auth = 4;
  Service service = 5;
}

message Trace {
  string endpoint = 1;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration read_timeout = 3;
    google.protobuf.Duration write_timeout = 4;
  }
  Database database = 1;
}

message Registry {
  message Consul {
    string address = 1;
    string scheme = 2;
  }
  Consul consul = 1;
}

message Auth {
  string service_key = 1;
  string api_key = 2;
  string casbin_model = 3;
  string casbin_source = 4;
}

message Service {
  string name = 1;
  string version = 2;
  message Administrator {
    string endpoint = 1;
  }
  Administrator administrator = 3;
  message Authorization {
    string endpoint = 1;
  }
  Authorization authorization = 4;
}
